@@ -78,17 +78,6 @@ public class DefaultConverter extends ConverterHelper {
     private static final VariantInfo VARIANT_OBJECT_XML = new VariantInfo(
             MediaType.APPLICATION_JAVA_OBJECT_XML);
 
-    /** Indicates whether the JavaBeans XML deserialization is supported or not. */
-    private static final boolean VARIANT_OBJECT_XML_SUPPORTED = Boolean
-            .getBoolean("org.restlet.engine.converter.DefaultConverter.VARIANT_OBJECT_XML_SUPPORTED");
-
-    /**
-     * Indicates whether the JavaBeans binary deserialization is supported or
-     * not.
-     */
-    private static final boolean VARIANT_OBJECT_BINARY_SUPPORTED = Boolean
-            .getBoolean("org.restlet.engine.converter.DefaultConverter.VARIANT_OBJECT_BINARY_SUPPORTED");
-
     @Override
     public List<Class<?>> getObjectClasses(Variant source) {
         List<Class<?>> result = null;
@@ -100,9 +89,9 @@ public class DefaultConverter extends ConverterHelper {
         if (source.getMediaType() != null) {
             MediaType mediaType = source.getMediaType();
 
-            if ((VARIANT_OBJECT_BINARY_SUPPORTED && MediaType.APPLICATION_JAVA_OBJECT
+            if ((ObjectRepresentation.VARIANT_OBJECT_BINARY_SUPPORTED && MediaType.APPLICATION_JAVA_OBJECT
                     .equals(mediaType))
-                    || (VARIANT_OBJECT_XML_SUPPORTED && MediaType.APPLICATION_JAVA_OBJECT_XML
+                    || (ObjectRepresentation.VARIANT_OBJECT_XML_SUPPORTED && MediaType.APPLICATION_JAVA_OBJECT_XML
                             .equals(mediaType))) {
                 result = addObjectClass(result, Object.class);
             } else if (MediaType.APPLICATION_WWW_FORM.equals(mediaType)) {
@@ -135,10 +124,10 @@ public class DefaultConverter extends ConverterHelper {
             } else if (Form.class.isAssignableFrom(source)) {
                 result = addVariant(result, VARIANT_FORM);
             } else if (Serializable.class.isAssignableFrom(source)) {
-                if (VARIANT_OBJECT_BINARY_SUPPORTED) {
+                if (ObjectRepresentation.VARIANT_OBJECT_BINARY_SUPPORTED) {
                     result = addVariant(result, VARIANT_OBJECT);
                 }
-                if (VARIANT_OBJECT_XML_SUPPORTED) {
+                if (ObjectRepresentation.VARIANT_OBJECT_XML_SUPPORTED) {
                     result = addVariant(result, VARIANT_OBJECT_XML);
                 }
             }
@@ -171,24 +160,24 @@ public class DefaultConverter extends ConverterHelper {
             result = 1.0F;
         } else if (source instanceof Serializable) {
             if (target != null) {
-                if (VARIANT_OBJECT_BINARY_SUPPORTED
+                if (ObjectRepresentation.VARIANT_OBJECT_BINARY_SUPPORTED
                         && MediaType.APPLICATION_JAVA_OBJECT.equals(target
                                 .getMediaType())) {
                     result = 1.0F;
-                } else if (VARIANT_OBJECT_BINARY_SUPPORTED
+                } else if (ObjectRepresentation.VARIANT_OBJECT_BINARY_SUPPORTED
                         && MediaType.APPLICATION_JAVA_OBJECT
                                 .isCompatible(target.getMediaType())) {
                     result = 0.6F;
-                } else if (VARIANT_OBJECT_XML_SUPPORTED
+                } else if (ObjectRepresentation.VARIANT_OBJECT_XML_SUPPORTED
                         && MediaType.APPLICATION_JAVA_OBJECT_XML.equals(target
                                 .getMediaType())) {
                     result = 1.0F;
-                } else if (VARIANT_OBJECT_XML_SUPPORTED
+                } else if (ObjectRepresentation.VARIANT_OBJECT_XML_SUPPORTED
                         && MediaType.APPLICATION_JAVA_OBJECT_XML
                                 .isCompatible(target.getMediaType())) {
                     result = 0.6F;
                 }
-            } else {
+            } else if (ObjectRepresentation.VARIANT_OBJECT_BINARY_SUPPORTED) {
                 result = 0.5F;
             }
         }
@@ -231,19 +220,19 @@ public class DefaultConverter extends ConverterHelper {
                 result = 1.0F;
             } else if (Serializable.class.isAssignableFrom(target)
                     || target.isPrimitive()) {
-                if (VARIANT_OBJECT_BINARY_SUPPORTED
+                if (ObjectRepresentation.VARIANT_OBJECT_BINARY_SUPPORTED
                         && MediaType.APPLICATION_JAVA_OBJECT.equals(source
                                 .getMediaType())) {
                     result = 1.0F;
-                } else if (VARIANT_OBJECT_BINARY_SUPPORTED
+                } else if (ObjectRepresentation.VARIANT_OBJECT_BINARY_SUPPORTED
                         && MediaType.APPLICATION_JAVA_OBJECT
                                 .isCompatible(source.getMediaType())) {
                     result = 0.6F;
-                } else if (VARIANT_OBJECT_XML_SUPPORTED
+                } else if (ObjectRepresentation.VARIANT_OBJECT_XML_SUPPORTED
                         && MediaType.APPLICATION_JAVA_OBJECT_XML.equals(source
                                 .getMediaType())) {
                     result = 1.0F;
-                } else if (VARIANT_OBJECT_XML_SUPPORTED
+                } else if (ObjectRepresentation.VARIANT_OBJECT_XML_SUPPORTED
                         && MediaType.APPLICATION_JAVA_OBJECT_XML
                                 .isCompatible(source.getMediaType())) {
                     result = 0.6F;
@@ -354,11 +343,11 @@ public class DefaultConverter extends ConverterHelper {
         if (Form.class.isAssignableFrom(entity)) {
             updatePreferences(preferences, MediaType.APPLICATION_WWW_FORM, 1.0F);
         } else if (Serializable.class.isAssignableFrom(entity)) {
-            if (VARIANT_OBJECT_BINARY_SUPPORTED) {
+            if (ObjectRepresentation.VARIANT_OBJECT_BINARY_SUPPORTED) {
                 updatePreferences(preferences,
                         MediaType.APPLICATION_JAVA_OBJECT, 1.0F);
             }
-            if (VARIANT_OBJECT_XML_SUPPORTED) {
+            if (ObjectRepresentation.VARIANT_OBJECT_XML_SUPPORTED) {
                 updatePreferences(preferences,
                         MediaType.APPLICATION_JAVA_OBJECT_XML, 1.0F);
             }
