@@ -54,27 +54,26 @@ import org.restlet.data.MediaType;
  * representations of JavaBeans using the {@link XMLEncoder} and
  * {@link XMLDecoder} classes. In this case, it handles representations having
  * the following media type: {@link MediaType#APPLICATION_JAVA_OBJECT_XML}
- * ("application/x-java-serialized-object+xml").
- * 
+ * ("application/x-java-serialized-object+xml").<br>
+ * <br>
  * SECURITY WARNING: The usage of {@link XMLDecoder} when deserializing XML
  * presentations from unstrusted sources can lead to malicious attacks. As
  * pointed <a href=
  * "http://blog.diniscruz.com/2013/08/using-xmldecoder-to-execute-server-side.html"
  * >here</a>, the {@link XMLDecoder} is able to force the JVM to execute
  * unwanted Java code described inside the XML file. Thus, the support of such
- * format has been disactivated by default inside the default converter. You can
- * activate this support by turning on the following system property:
- * org.restlet.engine.converter.DefaultConverter.VARIANT_OBJECT_XML_SUPPORTED.
- * 
+ * format has been disactivated by default. You can activate this support by
+ * turning on the following system property:
+ * org.restlet.representation.ObjectRepresentation.VARIANT_OBJECT_XML_SUPPORTED.<br>
+ * <br>
  * SECURITY WARNING: The usage of {@link ObjectInputStream} when deserializing
  * binary presentations from unstrusted sources can lead to malicious attacks.
  * As pointed <a
  * href="https://github.com/restlet/restlet-framework-java/issues/778"
  * >here</a>, the {@link ObjectInputStream} is able to force the JVM to execute
  * unwanted Java code. Thus, the support of such format has been disactivated by
- * default inside the default converter. You can activate this support by
- * turning on the following system property:
- * org.restlet.engine.converter.DefaultConverter
+ * default. You can activate this support by turning on the following system
+ * property: org.restlet.representation.ObjectRepresentation
  * .VARIANT_OBJECT_BINARY_SUPPORTED.
  * 
  * @author Jerome Louvel
@@ -83,6 +82,18 @@ import org.restlet.data.MediaType;
  */
 public class ObjectRepresentation<T extends Serializable> extends
         OutputRepresentation {
+
+    /** Indicates whether the JavaBeans XML deserialization is supported or not. */
+    public static final boolean VARIANT_OBJECT_XML_SUPPORTED = Boolean
+            .getBoolean("org.restlet.representation.ObjectRepresentation.VARIANT_OBJECT_XML_SUPPORTED");
+
+    /**
+     * Indicates whether the JavaBeans binary deserialization is supported or
+     * not.
+     */
+    public static final boolean VARIANT_OBJECT_BINARY_SUPPORTED = Boolean
+            .getBoolean("org.restlet.representation.ObjectRepresentation.VARIANT_OBJECT_BINARY_SUPPORTED");
+
     /** The serializable object. */
     private volatile T object;
 
@@ -124,6 +135,17 @@ public class ObjectRepresentation<T extends Serializable> extends
 
         if (serializedRepresentation.getMediaType().equals(
                 MediaType.APPLICATION_JAVA_OBJECT)) {
+            if (!VARIANT_OBJECT_BINARY_SUPPORTED) {
+                throw new IllegalArgumentException(
+                        "SECURITY WARNING: The usage of ObjectInputStream when "
+                                + "deserializing binary presentations from unstrusted "
+                                + "sources can lead to malicious attacks. As pointed "
+                                + "here (https://github.com/restlet/restlet-framework-java/issues/778), "
+                                + "the ObjectInputStream class is able to force the JVM to execute unwanted "
+                                + "Java code. Thus, the support of such format has been disactivated "
+                                + "by default. You can activate this support by turning on the following system property: "
+                                + "org.restlet.representation.ObjectRepresentation.VARIANT_OBJECT_BINARY_SUPPORTED.");
+            }
             setMediaType(MediaType.APPLICATION_JAVA_OBJECT);
             InputStream is = serializedRepresentation.getStream();
             ObjectInputStream ois = null;
@@ -151,8 +173,22 @@ public class ObjectRepresentation<T extends Serializable> extends
 
             ois.close();
             // [ifndef android]
-        } else if (serializedRepresentation.getMediaType().equals(
-                MediaType.APPLICATION_JAVA_OBJECT_XML)) {
+        } else if (VARIANT_OBJECT_XML_SUPPORTED
+                && serializedRepresentation.getMediaType().equals(
+                        MediaType.APPLICATION_JAVA_OBJECT_XML)) {
+            if (!VARIANT_OBJECT_XML_SUPPORTED) {
+                throw new IllegalArgumentException(
+                        "SECURITY WARNING: The usage of XMLDecoder when "
+                                + "deserializing XML presentations from unstrusted "
+                                + "sources can lead to malicious attacks. As pointed "
+                                + "here (http://blog.diniscruz.com/2013/08/using-xmldecoder-to-execute-server-side.html), "
+                                + "the XMLDecoder class is able to force the JVM to "
+                                + "execute unwanted Java code described inside the XML "
+                                + "file. Thus, the support of such format has been "
+                                + "disactivated by default. You can activate this "
+                                + "support by turning on the following system property: "
+                                + "org.restlet.representation.ObjectRepresentation.VARIANT_OBJECT_XML_SUPPORTED.");
+            }
             setMediaType(MediaType.APPLICATION_JAVA_OBJECT_XML);
             InputStream is = serializedRepresentation.getStream();
             java.beans.XMLDecoder decoder = new java.beans.XMLDecoder(is);
@@ -165,13 +201,12 @@ public class ObjectRepresentation<T extends Serializable> extends
 
             decoder.close();
             // [enddef]
-        } else {
-            throw new IllegalArgumentException(
-                    "The serialized representation must have this media type: "
-                            + MediaType.APPLICATION_JAVA_OBJECT.toString()
-                            + " or this one: "
-                            + MediaType.APPLICATION_JAVA_OBJECT_XML.toString());
         }
+        throw new IllegalArgumentException(
+                "The serialized representation must have this media type: "
+                        + MediaType.APPLICATION_JAVA_OBJECT.toString()
+                        + " or this one: "
+                        + MediaType.APPLICATION_JAVA_OBJECT_XML.toString());
     }
 
     /**
